--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0014)about:internet -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-    <link rel="stylesheet" href="./index_files/style.css">
+    <link rel="stylesheet" href="resources/css/style.css">
   </head>
   <body>
     <!-- "Main section" -->
